# parami-blockchain

./: .editorconfig  .gitignore  Cargo.toml  initial_drop.json
.github/actions/prepare/: action.yml
.github/workflows/: actions.yml  build.yml  coverage.yml  release.yml
.maintain/: benchmark.sh
cli/: Cargo.toml
cli/src/: chain_spec.rs
executor/: Cargo.toml
nodes/dana/: Cargo.toml
nodes/dana/src/: command.rs  rpc.rs  service.rs
nodes/para/: Cargo.toml
nodes/para/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/account-linker/: Cargo.toml
pallets/account-linker/src/: lib.rs  mock.rs
pallets/ad/: Cargo.toml
pallets/ad/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs
pallets/advertiser/: Cargo.toml
pallets/chainbridge/: Cargo.toml
pallets/chainbridge/src/: lib.rs  tests.rs
pallets/did/: Cargo.toml
pallets/did/rpc/: Cargo.toml
pallets/did/src/: lib.rs
pallets/did/utils/: Cargo.toml
pallets/linker/: Cargo.toml
pallets/linker/src/: did.rs  impl_links.rs  lib.rs  migrations.rs  ocw.rs  tests.rs
pallets/magic/: Cargo.toml
pallets/nft/: Cargo.toml
pallets/nft/src/: lib.rs  migrations.rs  mock.rs  tests.rs  types.rs
pallets/nft/src/ocw/: abi.rs  mod.rs
pallets/ocw/: Cargo.toml
pallets/ocw/src/: lib.rs  tests.rs
pallets/swap/: Cargo.toml
pallets/swap/rpc/: Cargo.toml
pallets/swap/rpc/runtime-api/: Cargo.toml
pallets/swap/src/: benchmarking.rs  farming.rs  impl_swaps.rs  lib.rs  migrations.rs  mock.rs  tests.rs  types.rs
pallets/tag/: Cargo.toml
pallets/tag/src/: lib.rs
pallets/template/: Cargo.toml
pallets/traits/: Cargo.toml
pallets/traits/src/: lib.rs  links.rs  swaps.rs
pallets/xassets/: Cargo.toml
pallets/xassets/src/: lib.rs  weights.rs
pallets/zkp/: Cargo.toml
pallets/zkp/rpc/: Cargo.toml
pallets/zkp/rpc/src/: lib.rs
pallets/zkp/src/: benchmarking.rs  impls.rs  lib.rs  ocw.rs  types.rs  weights.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
rpc/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
runtimes/dana/: Cargo.toml
runtimes/dana/src/: lib.rs  migrations.rs
runtimes/para/: Cargo.toml
runtimes/para/src/: lib.rs
testing/: Cargo.toml
