[workspace]
members = [
    'nodes/dana',
    'nodes/para',
    'pallets/*',
    'primitives',
    'runtimes/dana',
    'runtimes/para',
]

[profile.dev]
debug = true

[profile.release]
panic = 'unwind'
incremental = true
debug = 0

[profile.test]
debug = true

[profile.bench]
panic = 'unwind'
incremental = true
debug = 0
