[package]
name = 'parami-account-linker'
version = "0.2.0"
authors = ["Parami Team <info@parami.io>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]

frame-support = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09", default-features = false, optional = true }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09", default-features = false, optional = true }
sp-core = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09", default-features = false, optional = true }

log = { version = "0.4.14", default-features = false }
sha2 = { default-features = false, version = "0.9.5" }
ripemd160 = {default-features = false, version = "0.9.1" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", tag="monthly-2021-09" }

parity-crypto = {version = "0.8.0", features = ["publickey"] }
bitcoin = { version = "0.25.2", features = ["rand"] }
serde = { version = "1.0.119" }
hex = "0.4.2"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    "sp-io/std",
    "sp-std/std",
    "sha2/std",
    "ripemd160/std",
    "log/std",
    "frame-benchmarking/std",
]
runtime-benchmarks = ["sp-runtime", "frame-benchmarking", "sp-core"]
