[package]
authors = ['Parami Devs <info@parami.io>']
description = 'Parami zero-knowledge proof'
edition = '2021'
homepage = 'https://parami.io'
license = 'GPL-3.0-only WITH Classpath-exception-2.0'
name = 'parami-zkp'
publish = false
repository = 'https://github.com/parami-protocol/parami-blockchain/'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.2.0'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies]
parami-did = { path = '../did', default-features = false }
parami-traits = { path = '../traits', default-features = false }
base58 = '0.2'
hex = { version = '0.4', default-features = false, optional = true }
num-traits = { version = '0.2', default-features = false, features = ['libm'] }
ripemd160 = { version = '0.9', optional = true }
serde = { version = '1.0', optional = true }
serde_json = {version='1.0', optional = true}
tracing = { version = '0.1', default-features = false }

sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-runtime-interface = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }

frame-benchmarking = { git = 'https://github.com/paritytech/substrate', default-features = false, optional = true, branch = 'polkadot-v0.9.13' }
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
paillier = { optional= true, git ='https://github.com/RightFS/rust-paillier.git', branch = 'fix_js'}
bincode = { version = "1.3.3", optional = true}

[features]
default = ['std']

runtime-benchmarks = ['frame-benchmarking', 'hex/alloc']

std = [
    'parami-traits/std',
    'paillier',
    'hex/std',
    'ripemd160',
    'serde',
    'serde_json',
    'bincode',
    'tracing/std',
    'scale-info/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime-interface/std',
    'sp-runtime/std',
    'sp-std/std',
    'frame-benchmarking/std',
    'frame-support/std',
    'frame-system/std',
]

try-runtime = ['frame-support/try-runtime']
